--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2005-03-30  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser.adb:
+	(Node) [Inline_Stmt]: Add Before and After field.
+        (Get_Tag_Parameter): Improve to support any number of tag parameter.
+        (Get_Tag_Parameter_Count): New routine.
+        (Parse): Handle the new INLINE tag parameters before/after text.
+        (Analyse): Idem.
+        This new INLINE tag command permit a finer control on the layout.
+
 2005-03-28  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
@@ -15,7 +25,7 @@
 	 content) and also @_REPEAT(x):VAR_@ (repeat 'x' a number of time
 	 corresponding to VAR value).
 	(Value): Fix check to avoid Contraint_Error.
-	
+
 2005-03-27  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
