--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,18 @@
+2005-04-01  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser.ads:
+	(For_Every_Association): Fix typo in comment.
+	(Release_Cache): New routine.
+
+	* templates_parser.adb:
+	(Cached_Files.Release): New routine.
+	(Release_Cache): New routine.
+	(Release) [Tree, Include]: Fix recursive call for the Info node.
+
+	* templates_parser-cached_files.adb:
+	(Release): New routine.
+	Minor reformatting.
+
 2005-03-30  Pascal Obry  <pascal@obry.net>
 
 	* templates_parser-print_tree.adb:
