--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-02  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser-cached_files.adb:
+	(Release): Remove exception occurence in exception handler checked-in
+	 by error.
+
 2005-04-01  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.ads:
