--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-06  Pascal Obry  <pascal@obry.net>
+
+	* templates_parser-cached_files.adb:
+	(Update_Used_Counter): Add some comments.
+
 2005-04-02  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser-cached_files.adb:
